--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Assistant Professor <br />
 
 
 
-Goergen Institute for Data Science &amp; Department of Computer Science<br />
+Goergen Institute for Data Science and Artificial Intelligence (GIDS-AI) &amp; Department of Computer Science<br />
 University of Rochester <br />
 
 
@@ -67,7 +67,11 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2510.27117">&ldquo;GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs&rdquo;</a>.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2510.02983">&ldquo;Oracle-based Uniform Sampling from Convex Bodies&rdquo;</a>.</p>
+</li>
+<li><p>Received a research grant from Air Force Office of Scientific Research (AFOSR) for 2025-2028.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2505.17463">&ldquo;Multi-cut stochastic approximation methods for solving stochastic convex composite optimization&rdquo;</a>.</p>
 </li>
@@ -75,22 +79,18 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2407.10073">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2404.02239">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2402.08992">&ldquo;Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
+<li><p>A new paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a>.
+
+
+
+</p>
 </li>
 </ul>
 <h2>Support </h2>
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-05 21:25:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-03 00:48:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
