--- a/OPTML.html
+++ b/OPTML.html
@@ -103,7 +103,24 @@
 </li>
 <li><p>Proximal gradient method <a href="./teaching/OPTML/Lec6_Proximal_Gradient.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Accelerated gradient method <a href="./teaching/OPTML/Lec7_Accelerated_Gradient.pdf">[notes]</a><br />
+<li><p>Accelerated gradient method <a href="./teaching/OPTML/Lec7_Accelerated_Gradient.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Frank-Wolfe method <a href="./teaching/OPTML/Lec8_Frank-Wolfe_Method.pdf">[notes]</a><br /></p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>First-order methods II: advanced topics</p>
+<ul>
+<li><p>Dual methods <a href="./teaching/OPTML/Lec9_Dual_Methods.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Stochastic approximation <a href="./teaching/OPTML/Lec10_Stochastic_Approximation.pdf">[notes]</a><br />
+
+
+
+
 </p>
 </li>
 </ul>
@@ -112,7 +129,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-05 21:27:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-03 00:56:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
