--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,11 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p>GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs <a href="https://arxiv.org/pdf/2510.27117.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Ningji Wei and Jiaming Liang, arXiv:2510.27117, 2025</p>
+</li></ul>
+</li>
 <li><p>Oracle-based Uniform Sampling from Convex Bodies <a href="https://arxiv.org/pdf/2510.02983.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Thanh Dang and Jiaming Liang, arXiv:2510.02983, 2025</p>
@@ -222,7 +227,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-05 21:26:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-03 00:45:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
