--- a/talk.html
+++ b/talk.html
@@ -22,6 +22,12 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>Primal-dual Proximal Bundle and Conditional Gradient Methods for Convex Problems <a href="./talk/primal-dual_spp.pdf">[slides]</a> <br />
+AFOSR Mathematical Optimization Annual Review Meeting, Arlington, VA, September 2025 <br />
+INFORMS Annual meeting, Atlanta, GA, October 2025 <br /></p>
+</li>
+</ul>
+<ul>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="./talk/universal.pdf">[slides]</a> <br />
 International Conference on Continuous Optimization, Los Angeles, CA, July 2025 <br />
 SIAM-NNP Annual Meeting, Rochester, NY, November 2024 <br />
@@ -148,7 +154,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-31 21:22:00 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-03 01:07:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
