--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>The paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a> has been accepted by Mathematicalf Programming.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2510.27117">&ldquo;GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs&rdquo;</a>.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2510.02983">&ldquo;Oracle-based Uniform Sampling from Convex Bodies&rdquo;</a>.</p>
@@ -77,9 +79,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>The paper <a href="https://arxiv.org/abs/2402.17067">&ldquo;Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information&rdquo;</a> has been accepted by COLT 2025.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a>.
+<li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.
 
 
 
@@ -90,7 +90,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-03 00:48:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-23 15:13:30 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
