--- a/OPTML.html
+++ b/OPTML.html
@@ -127,9 +127,23 @@
 
 </li>
 </ul>
+<ul>
+<li><p>Selected topics in machine learning</p>
+<ul>
+<li><p>Online Optimization and Games <a href="./teaching/OPTML/Lec11_Online_Optimization_and_Games.pdf">[notes]</a><br /></p>
+</li>
+<li><p>Reinforcement learning <a href="./teaching/OPTML/Lec12_Reinforcement_Learning.pdf">[notes]</a><br />
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-03 00:56:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-23 15:15:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
