--- a/publication.html
+++ b/publication.html
@@ -45,12 +45,6 @@
 <li><p>Jiaming Liang, arXiv:2501.04165, 2025</p>
 </li></ul>
 </li>
-<li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
-<a href="https://arxiv.org/pdf/2412.00585">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, arXiv:2412.00585, 2024</p>
-</li></ul>
-</li>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro, arXiv:2407.10073, 2024</p>
@@ -83,6 +77,14 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
+<a href="https://arxiv.org/pdf/2412.00585">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang</p>
+</li>
+<li><p><b>Mathematical Programming</b>, 2025</p>
+</li></ul>
+</li>
 <li><p>Client-only Distributed Markov Chain Monte Carlo Sampling over a Network <a href="https://openreview.net/pdf?id=1bZ2rLfKwu">[pdf]</a> <br /></p>
 <ul>
 <li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, and Yongxin Chen</p>
@@ -227,7 +229,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-03 00:45:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-23 15:19:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
