--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
-<li><p>The paper <a href="https://arxiv.org/abs/2412.00585">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a> has been accepted by Mathematical Programming.</p>
+<li><p>The paper <a href="https://link.springer.com/content/pdf/10.1007/s10107-025-02307-z.pdf">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a> has been published in Mathematical Programming.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2510.27117">&ldquo;GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs&rdquo;</a>.</p>
 </li>
@@ -90,7 +90,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-23 19:43:52 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-01 11:41:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
