--- a/publication.html
+++ b/publication.html
@@ -78,7 +78,7 @@
 <h2>Journal Papers</h2>
 <ul>
 <li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
-<a href="https://arxiv.org/pdf/2412.00585">[pdf]</a> <br /></p>
+<a href="https://link.springer.com/content/pdf/10.1007/s10107-025-02307-z.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang</p>
 </li>
@@ -229,7 +229,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-23 15:19:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-01 11:42:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
