--- a/publication.html
+++ b/publication.html
@@ -77,6 +77,13 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://arxiv.org/abs/2402.17067">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
+</li>
+<li><p><b>IEEE Transactions on Information Theory</b></p>
+</li></ul>
+</li>
 <li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
 <a href="https://link.springer.com/content/pdf/10.1007/s10107-025-02307-z.pdf">[pdf]</a> <br /></p>
 <ul>
@@ -229,7 +236,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-01 11:42:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-14 12:30:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
