--- a/publication.html
+++ b/publication.html
@@ -45,11 +45,6 @@
 <li><p>Jiaming Liang, arXiv:2501.04165, 2025</p>
 </li></ul>
 </li>
-<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro, arXiv:2407.10073, 2024</p>
-</li></ul>
-</li>
 <li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen, arXiv:2404.02239, 2024</p>
@@ -77,6 +72,13 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro</p>
+</li>
+<li><p><b>Journal of Optimization Theory and Applications</b></p>
+</li></ul>
+</li>
 <li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://arxiv.org/abs/2402.17067">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
@@ -236,7 +238,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-14 12:30:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-15 13:40:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
