--- a/publication.html
+++ b/publication.html
@@ -76,14 +76,14 @@
 <ul>
 <li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro</p>
 </li>
-<li><p><b>Journal of Optimization Theory and Applications</b></p>
+<li><p><b>Journal of Optimization Theory and Applications</b>, 2025</p>
 </li></ul>
 </li>
 <li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://arxiv.org/abs/2402.17067">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
 </li>
-<li><p><b>IEEE Transactions on Information Theory</b></p>
+<li><p><b>IEEE Transactions on Information Theory</b>, 2025</p>
 </li></ul>
 </li>
 <li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
@@ -238,7 +238,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-15 13:40:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-17 12:23:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
