--- a/publication.html
+++ b/publication.html
@@ -50,11 +50,6 @@
 <li><p>Jiaming Liang and Yongxin Chen, arXiv:2404.02239, 2024</p>
 </li></ul>
 </li>
-<li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method <a href="https://arxiv.org/pdf/2402.08992.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, arXiv:2402.08992, 2024</p>
-</li></ul>
-</li>
 <li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2303.14896, 2023
@@ -171,6 +166,13 @@
 </ul>
 <h2>Conference Papers</h2>
 <ul>
+<li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method <a href="https://arxiv.org/pdf/2402.08992.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang</p>
+</li>
+<li><p><b>2026 Algorithmic Learning Theory (ALT)</b></p>
+</li></ul>
+</li>
 <li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://arxiv.org/abs/2402.17067">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
@@ -238,7 +240,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-17 12:23:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-18 19:47:06 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
