--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>The paper <a href="https://arxiv.org/abs/2404.02239">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a> has been accepted by Journal of Optimization Theory and Applications.</p>
+</li>
 <li><p>The paper <a href="https://arxiv.org/abs/2402.08992">&ldquo;Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method&rdquo;</a> has been accepted by Algorithmic Learning Theory 2026.</p>
 </li>
 <li><p>The paper <a href="https://arxiv.org/abs/2407.10073">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a> has been accepted by Journal of Optimization Theory and Applications.</p>
@@ -84,7 +86,6 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <li><p>A new paper <a href="https://arxiv.org/abs/2505.17463">&ldquo;Multi-cut stochastic approximation methods for solving stochastic convex composite optimization&rdquo;</a>.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.
-
 </p>
 </li>
 </ul>
@@ -92,7 +93,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-18 19:45:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-22 10:09:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
