--- a/publication.html
+++ b/publication.html
@@ -45,11 +45,6 @@
 <li><p>Jiaming Liang, arXiv:2501.04165, 2025</p>
 </li></ul>
 </li>
-<li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Yongxin Chen, arXiv:2404.02239, 2024</p>
-</li></ul>
-</li>
 <li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2303.14896, 2023
@@ -67,6 +62,13 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Yongxin Chen</p>
+</li>
+<li><p><b>Journal of Optimization Theory and Applications</b>, 2025</p>
+</li></ul>
+</li>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro</p>
@@ -240,7 +242,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-18 19:47:06 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-22 10:10:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
