--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>The paper <a href="https://arxiv.org/abs/2407.10073">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a> has been accepted by Journal of Optimization Theory and Applications.</p>
 </li>
-<li><p>The paper <a href="https://arxiv.org/abs/2402.17067">&ldquo;Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information&rdquo;</a> has been accepted by IEEE Transactions on Information Theory. </p>
+<li><p>The paper <a href="https://ieeexplore.ieee.org/document/11314867">&ldquo;Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information&rdquo;</a> has been accepted by IEEE Transactions on Information Theory. </p>
 </li>
 <li><p>The paper <a href="https://link.springer.com/content/pdf/10.1007/s10107-025-02307-z.pdf">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a> has been published in Mathematical Programming.</p>
 </li>
@@ -93,7 +93,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-22 10:09:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-22 21:14:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
