--- a/publication.html
+++ b/publication.html
@@ -22,44 +22,6 @@
 <h1>Publications </h1>
 <div id="subtitle"></div>
 </div>
-<h2>Preprints</h2>
-<ul>
-<li><p>GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs <a href="https://arxiv.org/pdf/2510.27117.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Ningji Wei and Jiaming Liang, arXiv:2510.27117, 2025</p>
-</li></ul>
-</li>
-<li><p>Oracle-based Uniform Sampling from Convex Bodies <a href="https://arxiv.org/pdf/2510.02983.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Thanh Dang and Jiaming Liang, arXiv:2510.02983, 2025</p>
-</li></ul>
-</li>
-<li><p>Multi-cut stochastic approximation methods for solving stochastic convex composite optimization <a href="https://arxiv.org/pdf/2505.17463.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2505.17463, 2025</p>
-</li></ul>
-</li>
-<li><p>Unifying restart accelerated gradient and proximal bundle methods
-<a href="https://arxiv.org/pdf/2501.04165">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, arXiv:2501.04165, 2025</p>
-</li></ul>
-</li>
-<li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2303.14896, 2023
-
-</p>
-</li></ul>
-</li>
-<li><p>A Doubly Accelerated Inexact Proximal Point Method for Nonconvex Composite Optimization Problems <a href="https://arxiv.org/pdf/1811.11378.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:1811.11378, 2018</p>
-</li>
-</ul>
-
-</li>
-</ul>
 <h2>Journal Papers</h2>
 <ul>
 <li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
@@ -76,7 +38,7 @@
 <li><p><b>Journal of Optimization Theory and Applications</b>, 2025</p>
 </li></ul>
 </li>
-<li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://arxiv.org/abs/2402.17067">[pdf]</a> <br /></p>
+<li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://ieeexplore.ieee.org/document/11314867">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
 </li>
@@ -234,6 +196,44 @@
 
 </li>
 </ul>
+<h2>Preprints</h2>
+<ul>
+<li><p>GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs <a href="https://arxiv.org/pdf/2510.27117.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Ningji Wei and Jiaming Liang, arXiv:2510.27117, 2025</p>
+</li></ul>
+</li>
+<li><p>Oracle-based Uniform Sampling from Convex Bodies <a href="https://arxiv.org/pdf/2510.02983.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Thanh Dang and Jiaming Liang, arXiv:2510.02983, 2025</p>
+</li></ul>
+</li>
+<li><p>Multi-cut stochastic approximation methods for solving stochastic convex composite optimization <a href="https://arxiv.org/pdf/2505.17463.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2505.17463, 2025</p>
+</li></ul>
+</li>
+<li><p>Unifying restart accelerated gradient and proximal bundle methods
+<a href="https://arxiv.org/pdf/2501.04165">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, arXiv:2501.04165, 2025</p>
+</li></ul>
+</li>
+<li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Renato D.C. Monteiro, and Honghao Zhang, arXiv:2303.14896, 2023
+
+</p>
+</li></ul>
+</li>
+<li><p>A Doubly Accelerated Inexact Proximal Point Method for Nonconvex Composite Optimization Problems <a href="https://arxiv.org/pdf/1811.11378.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:1811.11378, 2018</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <h2>Patents</h2>
 <ul>
 <li><p>Rien Quirynen, Jiaming Liang, and Stefano Di Cairano. Controller with Early Termination in Mixed-Integer Optimal Control Optimization. US Patent App. 17089763. 05/05/2022.
@@ -242,7 +242,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-22 10:10:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-22 21:14:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
