--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2602.14478">&ldquo;Constrained and Composite Sampling via Proximal Sampler&rdquo;</a>.</p>
+</li>
 <li><p>The paper <a href="https://arxiv.org/abs/2404.02239">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a> has been accepted by Journal of Optimization Theory and Applications.</p>
 </li>
 <li><p>The paper <a href="https://arxiv.org/abs/2402.08992">&ldquo;Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method&rdquo;</a> has been accepted by Algorithmic Learning Theory 2026.</p>
@@ -83,9 +85,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>Received a research grant from Air Force Office of Scientific Research (AFOSR) for 2025-2028.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2505.17463">&ldquo;Multi-cut stochastic approximation methods for solving stochastic convex composite optimization&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2501.04165">&ldquo;Unifying restart accelerated gradient and proximal bundle methods&rdquo;</a>.
+<li><p>A new paper <a href="https://arxiv.org/abs/2505.17463">&ldquo;Multi-cut stochastic approximation methods for solving stochastic convex composite optimization&rdquo;</a>.
+
 </p>
 </li>
 </ul>
@@ -93,7 +94,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-22 21:14:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-17 15:35:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
