--- a/publication.html
+++ b/publication.html
@@ -198,6 +198,12 @@
 </ul>
 <h2>Preprints</h2>
 <ul>
+<li><p>Constrained and Composite Sampling via Proximal Sampler
+<a href="https://arxiv.org/pdf/2602.14478.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Thanh Dang and Jiaming Liang, arXiv:2602.14478, 2026</p>
+</li></ul>
+</li>
 <li><p>GFORS: GPU-Accelerated First-Order Method with Randomized Sampling for Binary Integer Programs <a href="https://arxiv.org/pdf/2510.27117.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Ningji Wei and Jiaming Liang, arXiv:2510.27117, 2025</p>
@@ -242,7 +248,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-22 21:14:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-17 15:35:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
