--- a/talk.html
+++ b/talk.html
@@ -22,6 +22,11 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>Uniform, Constrained, and Composite Sampling via Proximal Sampler 
+Department of Mathematics, Florida State University, Tallahassee, FL, February 2026 <br /></p>
+</li>
+</ul>
+<ul>
 <li><p>Primal-dual Proximal Bundle and Conditional Gradient Methods for Convex Problems <a href="./talk/primal-dual_spp.pdf">[slides]</a> <br />
 AFOSR Mathematical Optimization Annual Review Meeting, Arlington, VA, September 2025 <br />
 INFORMS Annual meeting, Atlanta, GA, October 2025 <br /></p>
@@ -154,7 +159,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-03 01:07:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-17 15:37:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
