--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
 <img src="JiamingLiang_Web.jpg" alt="alt text" width="244.8px" height="326.4px" />&nbsp;</td>
 <td align="left"><p>Jiaming Liang  <a href="https://scholar.google.com/citations?user=fUBCj-0AAAAJ&amp;hl=en">[Google Scholar]</a> <br /> 
 
-
 Assistant Professor <br />
-
-
-
-Goergen Institute for Data Science and Artificial Intelligence (GIDS-AI) &amp; Department of Computer Science<br />
+Goergen Institute for Data Science and Artificial Intelligence (GIDS-AI) <br />
+Department of Computer Science <br />
+Department of Electrical and Computer Engineering <br />
 University of Rochester <br />
 
 
@@ -94,7 +92,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-17 15:35:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-17 15:40:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
