--- a/talk.html
+++ b/talk.html
@@ -22,7 +22,7 @@
 <h1>Talks</h1>
 </div>
 <ul>
-<li><p>Uniform, Constrained, and Composite Sampling via Proximal Sampler 
+<li><p>Uniform, Constrained, and Composite Sampling via Proximal Sampler <br />
 Department of Mathematics, Florida State University, Tallahassee, FL, February 2026 <br /></p>
 </li>
 </ul>
@@ -159,7 +159,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-17 15:37:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-17 15:43:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
