--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>A new paper <a href="https://arxiv.org/abs/2602.14478">&ldquo;Constrained and Composite Sampling via Proximal Sampler&rdquo;</a>.</p>
+<li><p>The paper <a href="https://trebuchet.public.springernature.app/get_content/cf472184-a871-4670-861c-f6fb10b60e08?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20260218&amp;utm_content=10.1007/s10957-026-02937-z">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a> has been published in Journal of Optimization Theory and Applications.</p>
 </li>
-<li><p>The paper <a href="https://arxiv.org/abs/2404.02239">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a> has been accepted by Journal of Optimization Theory and Applications.</p>
+<li><p>The paper <a href="https://trebuchet.public.springernature.app/get_content/99ca41d3-f0bd-47e5-aea9-a0c97272eca9?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20260218&amp;utm_content=10.1007/s10957-025-02927-7">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a> has been published in Journal of Optimization Theory and Applications.</p>
+</li>
+<li><p>A new paper <a href="https://arxiv.org/abs/2602.14478">&ldquo;Constrained and Composite Sampling via Proximal Sampler&rdquo;</a>.</p>
 </li>
 <li><p>The paper <a href="https://arxiv.org/abs/2402.08992">&ldquo;Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method&rdquo;</a> has been accepted by Algorithmic Learning Theory 2026.</p>
 </li>
-<li><p>The paper <a href="https://arxiv.org/abs/2407.10073">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a> has been accepted by Journal of Optimization Theory and Applications.</p>
-</li>
-<li><p>The paper <a href="https://ieeexplore.ieee.org/document/11314867">&ldquo;Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information&rdquo;</a> has been accepted by IEEE Transactions on Information Theory. </p>
+<li><p>The paper <a href="https://ieeexplore.ieee.org/document/11314867">&ldquo;Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information&rdquo;</a> has been published in IEEE Transactions on Information Theory. </p>
 </li>
 <li><p>The paper <a href="https://link.springer.com/content/pdf/10.1007/s10107-025-02307-z.pdf">&ldquo;Primal-dual proximal bundle and conditional gradient methods for convex problems&rdquo;</a> has been published in Mathematical Programming.</p>
 </li>
@@ -92,7 +92,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-17 15:40:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-18 09:11:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
