--- a/publication.html
+++ b/publication.html
@@ -24,14 +24,14 @@
 </div>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>Proximal Oracles for Optimization and Sampling <a href="https://arxiv.org/pdf/2404.02239.pdf">[pdf]</a> <br /></p>
+<li><p>Proximal Oracles for Optimization and Sampling <a href="https://trebuchet.public.springernature.app/get_content/cf472184-a871-4670-861c-f6fb10b60e08?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20260218&amp;utm_content=10.1007/s10957-026-02937-z">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen</p>
 </li>
 <li><p><b>Journal of Optimization Theory and Applications</b>, 2025</p>
 </li></ul>
 </li>
-<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://arxiv.org/pdf/2407.10073.pdf">[pdf]</a> <br /></p>
+<li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://trebuchet.public.springernature.app/get_content/99ca41d3-f0bd-47e5-aea9-a0c97272eca9?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20260218&amp;utm_content=10.1007/s10957-025-02927-7">[pdf]</a> <br /></p>
 <ul>
 <li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro</p>
 </li>
@@ -248,7 +248,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-17 15:35:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-18 09:11:24 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
