--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>The paper <a href="https://trebuchet.public.springernature.app/get_content/cf472184-a871-4670-861c-f6fb10b60e08?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20260218&amp;utm_content=10.1007/s10957-026-02937-z">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a> has been published in Journal of Optimization Theory and Applications.</p>
+<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10957-026-02937-z">&ldquo;Proximal Oracles for Optimization and Sampling&rdquo;</a> has been published in Journal of Optimization Theory and Applications.</p>
 </li>
-<li><p>The paper <a href="https://trebuchet.public.springernature.app/get_content/99ca41d3-f0bd-47e5-aea9-a0c97272eca9?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20260218&amp;utm_content=10.1007/s10957-025-02927-7">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a> has been published in Journal of Optimization Theory and Applications.</p>
+<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10957-025-02927-7">&ldquo;Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization&rdquo;</a> has been published in Journal of Optimization Theory and Applications.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2602.14478">&ldquo;Constrained and Composite Sampling via Proximal Sampler&rdquo;</a>.</p>
 </li>
@@ -92,7 +92,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <p>Jiaming's research has been supported by an AFOSR award and a seed funding from <a href="https://www.hajim.rochester.edu/dsc/research/funding.html">GIDS-AI</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-18 09:11:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-20 16:16:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
