--- a/publication.html
+++ b/publication.html
@@ -28,21 +28,21 @@
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen</p>
 </li>
-<li><p><b>Journal of Optimization Theory and Applications</b>, 2026</p>
+<li><p><b>Journal of Optimization Theory and Applications</b>, 208(110), 2026</p>
 </li></ul>
 </li>
 <li><p>Universal subgradient and proximal bundle methods for convex and strongly convex hybrid composite optimization <a href="https://link.springer.com/article/10.1007/s10957-025-02927-7">[pdf]</a> <br /></p>
 <ul>
 <li><p>Vincent Guigues, Jiaming Liang, and Renato D.C. Monteiro</p>
 </li>
-<li><p><b>Journal of Optimization Theory and Applications</b>, 2026</p>
+<li><p><b>Journal of Optimization Theory and Applications</b>, 208(112), 2026</p>
 </li></ul>
 </li>
 <li><p>Characterizing Dependence of Samples along the Langevin Dynamics and Algorithms via Contraction of <img class="eq" src="eqs/5161677540983415935-130.png" alt="Phi" style="vertical-align: -0px" />-Mutual Information <a href="https://ieeexplore.ieee.org/document/11314867">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Siddharth Mitra, and Andre Wibisono</p>
 </li>
-<li><p><b>IEEE Transactions on Information Theory</b>, 2025</p>
+<li><p><b>IEEE Transactions on Information Theory</b>, 72(2):921–945, 2026</p>
 </li></ul>
 </li>
 <li><p>Primal-dual proximal bundle and conditional gradient methods for convex problems
@@ -248,7 +248,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-20 16:16:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-21 09:58:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
